# engine

./: CMakeLists.txt  run.sh
include/: input.h  renderer.h  shader.h  state_manager.h  utils.h
include/glad/: glad.h
shaders/: basic.vert  fragment_shader.frag  framebuffer.frag  vertex_shader.vert
src/: glad.c  input.c  main.c  renderer.c  shader.c  state_manager.c  utils.c
